--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -173,16 +173,16 @@
     top: 0.8rem;
   }
 
-  &__checkbox:checked + &__button &__icon {
+  &__checkbox.close + &__button &__icon {
     background-color: transparent;
   }
 
-  &__checkbox:checked + &__button &__icon::before {
+  &__checkbox.close + &__button &__icon::before {
     transform: rotate(-135deg);
     top: 0;
   }
 
-  &__checkbox:checked + &__button &__icon::after {
+  &__checkbox.close + &__button &__icon::after {
     transform: rotate(135deg);
     top: 0;
   }
